<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_container_view"
    android:name="com.example.android.threekingdomschess.InfoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/designer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/designer"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        app:layout_constraintBaseline_toBaselineOf="@+id/player2"
        app:layout_constraintEnd_toEndOf="@+id/indicator_1"
        app:layout_constraintStart_toStartOf="@+id/indicator_1" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/player_2"
        app:layout_constraintBottom_toTopOf="@+id/indicator_2"
        app:layout_constraintEnd_toEndOf="@+id/indicator_2"
        app:layout_constraintStart_toStartOf="@+id/indicator_2" />

    <TextView
        android:id="@+id/player3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_3"
        app:layout_constraintBaseline_toBaselineOf="@+id/player2"
        app:layout_constraintEnd_toEndOf="@+id/indicator_3"
        app:layout_constraintStart_toStartOf="@+id/indicator_3" />

    <ImageView
        android:id="@+id/indicator_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:alpha="1.0"
        android:contentDescription="@string/player_indicator"
        app:layout_constraintEnd_toStartOf="@+id/indicator_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/designer"
        app:srcCompat="@drawable/indicator_ring_s"
        app:tint="#8DFF9A" />

    <ImageView
        android:id="@+id/indicator_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1.0"
        app:layout_constraintHorizontal_bias="0.45"
        android:contentDescription="@string/player_indicator"
        app:layout_constraintBottom_toBottomOf="@+id/indicator_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/indicator_1"
        app:srcCompat="@drawable/indicator_ring_s"
        app:tint="#9A8DFF" />

    <ImageView
        android:id="@+id/indicator_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1.0"
        app:layout_constraintHorizontal_bias="0.40"
        android:contentDescription="@string/player_indicator"
        app:layout_constraintBottom_toBottomOf="@+id/indicator_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/indicator_2"
        app:layout_constraintTop_toTopOf="@+id/indicator_2"
        app:srcCompat="@drawable/indicator_ring_s"
        app:tint="#FF9A8D" />

    <ImageView
        android:id="@+id/arrow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow"
        app:layout_constraintBottom_toBottomOf="@+id/indicator_2"
        app:layout_constraintEnd_toStartOf="@+id/indicator_2"
        app:layout_constraintStart_toEndOf="@+id/indicator_1"
        app:layout_constraintTop_toTopOf="@+id/indicator_2"
        app:srcCompat="@drawable/ic_baseline_arrow" />

    <ImageView
        android:id="@+id/arrow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow"
        app:layout_constraintBottom_toBottomOf="@+id/indicator_2"
        app:layout_constraintEnd_toStartOf="@+id/indicator_3"
        app:layout_constraintStart_toEndOf="@+id/indicator_2"
        app:layout_constraintTop_toTopOf="@+id/indicator_2"
        app:srcCompat="@drawable/ic_baseline_arrow" />

    <ImageView
        android:id="@+id/g_set_w"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/chess_set"
        app:layout_constraintEnd_toEndOf="@+id/indicator_1"
        app:layout_constraintStart_toStartOf="@+id/indicator_1"
        app:layout_constraintTop_toBottomOf="@+id/indicator_1"
        app:srcCompat="@drawable/g_set_w" />

    <ImageView
        android:id="@+id/b_set_w"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/chess_set"
        app:layout_constraintEnd_toEndOf="@+id/indicator_2"
        app:layout_constraintStart_toStartOf="@+id/indicator_2"
        app:layout_constraintTop_toBottomOf="@+id/indicator_2"
        app:srcCompat="@drawable/b_set_w" />

    <ImageView
        android:id="@+id/r_set_c"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/chess_set"
        app:layout_constraintEnd_toEndOf="@+id/r_set_w"
        app:layout_constraintStart_toStartOf="@+id/r_set_w"
        app:layout_constraintTop_toBottomOf="@+id/or3"
        app:srcCompat="@drawable/r_set_c" />

    <ImageView
        android:id="@+id/r_set_w"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/chess_set"
        app:layout_constraintEnd_toEndOf="@+id/indicator_3"
        app:layout_constraintStart_toStartOf="@+id/indicator_3"
        app:layout_constraintTop_toBottomOf="@+id/indicator_3"
        app:srcCompat="@drawable/r_set_w" />

    <ImageView
        android:id="@+id/b_set_c"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/chess_set"
        app:layout_constraintEnd_toEndOf="@+id/b_set_w"
        app:layout_constraintStart_toStartOf="@+id/b_set_w"
        app:layout_constraintTop_toBottomOf="@+id/or2"
        app:srcCompat="@drawable/b_set_c" />

    <ImageView
        android:id="@+id/g_set_c"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/chess_set"
        app:layout_constraintEnd_toEndOf="@+id/g_set_w"
        app:layout_constraintStart_toStartOf="@+id/g_set_w"
        app:layout_constraintTop_toBottomOf="@+id/or1"
        app:srcCompat="@drawable/g_set_c" />

    <TextView
        android:id="@+id/or1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="@+id/g_set_w"
        app:layout_constraintStart_toStartOf="@+id/g_set_w"
        app:layout_constraintTop_toBottomOf="@+id/g_set_w" />

    <TextView
        android:id="@+id/or2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="@+id/b_set_w"
        app:layout_constraintStart_toStartOf="@+id/b_set_w"
        app:layout_constraintTop_toBottomOf="@+id/b_set_w" />

    <TextView
        android:id="@+id/or3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="@+id/r_set_w"
        app:layout_constraintStart_toStartOf="@+id/r_set_w"
        app:layout_constraintTop_toBottomOf="@+id/r_set_w" />

    <TextView
        android:id="@+id/clickToReveal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/click_to_reveal_piece"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/b_set_c"
        app:layout_constraintStart_toStartOf="@+id/b_set_c"
        app:layout_constraintTop_toBottomOf="@+id/b_set_c" />

    <ImageView
        android:id="@+id/clickToRevealImage1"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/click_to_reveal_piece"
        app:layout_constraintEnd_toStartOf="@+id/arrow3"
        app:layout_constraintTop_toBottomOf="@+id/clickToReveal"
        app:srcCompat="@drawable/unrevealed" />

    <ImageView
        android:id="@+id/arrow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow"
        app:layout_constraintBottom_toBottomOf="@+id/clickToRevealImage1"
        app:layout_constraintEnd_toEndOf="@+id/clickToReveal"
        app:layout_constraintStart_toStartOf="@+id/clickToReveal"
        app:layout_constraintTop_toTopOf="@+id/clickToRevealImage1"
        app:srcCompat="@drawable/ic_baseline_arrow" />

    <ImageView
        android:id="@+id/clickToRevealImage2"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/click_to_reveal_piece"
        app:layout_constraintBottom_toBottomOf="@+id/clickToRevealImage1"
        app:layout_constraintStart_toEndOf="@+id/arrow3"
        app:layout_constraintTop_toTopOf="@+id/clickToRevealImage1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/revealed" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rule_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickToRevealImage1" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>